Fix off center headings

--- a/source/quartz/styles/custom.scss
+++ b/source/quartz/styles/custom.scss
@@ -10,6 +10,6 @@ article h1 {
   font-size: medium;
 }
 
-article h1 a.internal {
+  article h1 a {
   display: none;
 }
